Added everything but need to preview it all together

--- a/recipes/cinnamonrolls.html
+++ b/recipes/cinnamonrolls.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Easy Cinnamon Rolls</h1>
+
+    <img src="../img/cinnamonrolls.jpg" alt="A piece of pot pie"
+    height="250" width="250">
+    <br>
+    <p>A quick and delicious snack that can be enjoyed any time.  </p>
+    <p>The recipe shown here is a nice hack recipe that doesn't require you to make anything from scratch</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pillsbury Cinnamon Rolls</li>
+        <li>Butter</li>
+        <li>Heavy Whipping Cream</li>
+        
+    </ul>
+    <br>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat your oven to 350 F</li>
+        <li>Use butter to grease your baking dish and add your cinnamon rolls</li>
+        <li>Cover your rolls with aluminum foil (optional)</li>
+        <li>Bake for 30 minutes</li>
+        <li>Let cool and enjoy</li>
     
+    </ol>
 </body>
 </html>
