--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Detroit Style Pizza</h1>
+
+    <img src="../img/pizza.jpg" alt="A piece of pot pie"
+    height="300" width="300">
+    <br>
+    <p>A recipe for one of the lesser appreciated styles of pizza. </p>
+    <p>A Detroit Style pizza is known for it's fluffy crust and crispy cheese edges. The minimal amount of time necessary to prepare to recipe is 4 hours, so you will need to plan ahead. </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Flour</li>
+        <li>Yeast</li>
+        <li>Salt</li>
+        <li>Garlic</li>
+        <li>Italian seasonings</li>
+        <li>Can of crushed tomatoes</li>
+        <li>Cheese of choice</li>
+        <li>Toppings of choice</li>
+    </ul>
+    <br>
+    <h2>Directions</h2>
+    <ol>
+        <li>Add you yeast and sugar to warm water to ensure that yeast is still active</li>
+        <li>Mix your flour and salt together and add water yeast mixture. There should be no dry flour remaining</li>
+        <li>Let rest for 15-25 minutes</li>
+        <li>Knead the dough for 5-10 minutes. You should feel changes in the dough over time</li>
+        <li>Add needed dough to a greased bowl, cover and allow to rise at room temperature for 1.5 hours</li>
+        <li>Stretch dough out to you desired deep pan and allow to rise for 1 hour</li>
+        <li>While the dough is rising, prepare your cheese(if necessary) and tomato sauce. Also preheat your oven to 425 degress F</li>
+        <li>For tomato sauce, add chopped garlic to hot pan containing olive oil</li>
+        <li>Allow Garlic to cook for a little while but to long</li>
+        <li>Add your Italian seasonings and salt to taste</li>
+        <li>Cook your dough in the over for approx. 12 minutes. Dough should be done at this point</li>
+        <li>Add your sauce and cheese, and toppings to your pizza. <strong>MAke sure to add cheese all the way to the edge of the pan to get the signature crispy-cheesy edges</strong></li>
+        <li>Cook under the broiler until you are satisfied with the cheese.</li>
+    </ol>
 </body>
 </html>
