--- a/recipes/potpie.html
+++ b/recipes/potpie.html
@@ -8,6 +8,34 @@
 <body>
     <h1>Chicken Pot Pie</h1>
 
-    <img src="./img/potpie.jpg" alt="A piece of pot pie">
+    <img src="../img/potpie.jpg" alt="A piece of pot pie"
+    height="250" width="250">
+    <br>
+    <p>A delicious family sized dish that will remind you of Sundays with your grandmother </p>
+    <p>This recipe does take a certain level of skill so don't get discouraged if it isn't perfect your first time around.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>All purpose flour</li>
+        <li>butter, pre-chilled</li>
+        <li>chicken broth</li>
+        <li>frozen carrots and peas</li>
+        <li>chicken</li>
+        <li>onion</li>
+        <li>milk</li>
+    </ul>
+    <br>
+    <h2>Directions</h2>
+    <ol>
+        <li>Roast your chicken in the oven until it reaches and internal temperature of 165. Set aside to cool</li>
+        <li>Cut your cutter into your flour. Add water and roll your flour into two quarter inch thick circles. Circles should match the size of your pot.</li>
+        <li>Preheat your oven to 425 degrees F</li>
+        <li>Make a butter and flour roux and add hot chicken broth to it</li>
+        <li>Add your milk to the "gravy" to give it a creamier texture</li>
+        <li>Add your chicken, chopped onions, and frozen vegetables to your gravy</li>
+        <li>Add the pot pie mixture to your crust and cover</li>
+        <li>Cook for 45 minutes. Cover the top with aluminum foil if it starts to get too dark</li>
+        <li>Wait for pie to cool and enjoy</li>
+        
+    </ol>
 </body>
 </html>
